# fac

./: .gitignore  CLAUDE.md  HEARTBEATS.md  agents.yaml  notifications  permissions.yaml
.claude/commands/: factory-build.md  factory-librarian.md  factory-new.md  factory-operator.md  factory-research.md  factory-review.md  factory-spec.md  factory-start.md  factory-status.md  factory-verify.md
apps/: gsd.yaml
learnings/discoveries/: 2026-02-25-factory-first-pipeline-traversal.md  2026-02-25-factory-observation-pipeline.md
learnings/failures/: 2026-02-24-seed-skill-gaps-verification-failure.md  2026-02-24-seed-skill-gaps.v1-verification-failure.md
memory/builder/: MEMORY.md  needs.md
memory/librarian/: MEMORY.md  needs.md
memory/operator/: MEMORY.md  needs.md
memory/researcher/: MEMORY.md  needs.md
memory/reviewer/: MEMORY.md  needs.md
memory/shared/: KNOWLEDGE.md  PROJECTS.md
memory/spec/: MEMORY.md  needs.md
memory/verifier/: MEMORY.md  needs.md
projects/hello-world/: hello.py
projects/hello-world-python/: hello_world.py
runs/20260224-022823-spec/: context.md  conversation.jsonl  meta.yaml  outcome.md
runs/20260224-023122-spec/: context.md  conversation.jsonl  meta.yaml  outcome.md
runs/20260224-023140-spec/: context.md  conversation.jsonl  meta.yaml  (+1 more)
runtime/: pyproject.toml
runtime/factory_runtime/: __init__.py  access.py  apps.py  cli.py  config.py  context.py  llm.py  permissions.py  run_log.py  tools.py
runtime/factory_runtime/backends/: __init__.py  anthropic.py  capabilities.md  common.py  kimi.py
universe/: values.md
(+433 files in other folders)
